--- a/.gitignore
+++ b/.gitignore
@@ -155,6 +155,9 @@ cython_debug/
 # MLFlow runs
 mlruns/
 
+# Hydra outputs
+outputs/
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
