--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,9 @@ mlruns/
 # Hydra outputs
 outputs/
 
+# Jupyter notebooks
+*.ipynb
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
