--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ pandas==1.5.0
 scikit_learn==1.1.2
 python-dotenv==0.21.0
 jupyterlab==3.5.0
-jupytext==1.14.1
+# jupytext==1.14.1
 hydra-core==1.2.0
+matplotlib==3.6.1
